...
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="no_weight_recorded_yet_text">No weight recorded yet</string>
    <string name="goal_text">GOAL</string>
    <string name="set_goal_text">SET GOAL</string>
    <string name="cancel_text">Cancel</string>
    <string name="goal_weight_text">%.1f lbs</string>
    <string name="last_recorded_weight_text">Last recorded weight: %.1f lbs</string>
    <string name="weight_day_title_text">Weight Day</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
...
